ggspectra 0.3.4 (2019-05-xx)
============================

* Add convenience functions to make easier to modify plotting options:
set_annotations_default() and set_w.band_default().
* Add support for adding and removing annotations from the current default
by accepting lists of character vectors as argument for parameter annotations
in autoplot() methods.

ggspectra 0.3.3 (2019-03-28)
============================

* Use a compute panel function instead of a compute group function in
stat_wb_label(), stat_wb_box() and stat_wl_strip(), solving a bug affecting
autoplot() methods when called with multiple spectra.

ggspectra 0.3.2 (2019-02-19)
============================

* Move 'ggplot2' from Imports: to Depends: as the objects returned belong to
classes defined in this package.
* Move 'photobiology' from Imports: to Depends: as the objects accepted as input
belong to classes defined in this package and is natural for users to want to
use specialized methods to operate on them.
* Define autoplot() methods as replacements for plot() methods, which are now
deprecated. All documentation now uses autoplot().
- As 'ggplot2' exports a generic for autoplot() and the expected returned value
is a ggplot which matches the returned value of the methods defined here, we
have renamed them to autoplot(). For backwards compatibility plot() methods
remain available, but their use in new code is deprecated.

ggspectra 0.3.1 (2018-10-28)
============================

* Fix major bug in plot() methods for source_spct and response_spct classes,
that triggered errors in all cases when time.unit was not "second".
* Add scale_y_s.e.irrad_log10() and scale_y_s.q.irrad_log10().
* Test with 'ggplot2' version 3.1.0.

ggspectra 0.3.0 (2018-10-06)
============================

** Change the names of some the values calculated by the stats defined in
'ggspectra' to avoid confusion with the names of 'ggplot2' aesthetics.
** This is a code breaking change!
